namespaces/kube-system/sealed-secrets/vs-sealed-secrets.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sealed-secrets
  namespace: kube-system
  annotations:
    external-dns.alpha.kubernetes.io/target: raspbernetes.com
spec:
  hosts:
    - 'sealed-secrets.raspbernetes.com'
  gateways:
    - istio-system/istio-system-ingress-gateway
  http:
    - match:
        - port: 443
      route:
        - destination:
            port:
              number: 8080
            host: sealed-secrets.kube-system.svc.cluster.local
